force-app/main/default/objects/TVA_Produit__c/TVA_Produit__c.object-meta.xml
<CustomObject>
    <description>Liste des TVA disponible par produits.
Cet objet permettra de gérer les taux de TVA dynamiques</description>
    <label>TVA Produit</label>
    <nameField>
        <label>Nom De TVA</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TVA Produits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>