force-app/main/default/objects/TVA_Produit__c/fields/Datedebut__c.field-meta.xml
<CustomField>
    <fullName>Datedebut__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date début</label>
    <required>true</required>
    <type>Date</type>
</CustomField>