force-app/main/default/objects/TVA_Produit__c/fields/Datefin__c.field-meta.xml
<CustomField>
    <fullName>Datefin__c</fullName>
    <label>Date fin</label>
    <type>Date</type>
</CustomField>