force-app/main/default/objects/TVA_Produit__c/fields/Produit__c.field-meta.xml
<CustomField>
    <fullName>Produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>TVA Produits</relationshipLabel>
    <relationshipName>TVA_Produits</relationshipName>
    <type>Lookup</type>
</CustomField>