force-app/main/default/objects/TVA_Produit__c/fields/Taux__c.field-meta.xml
<CustomField>
    <fullName>Taux__c</fullName>
    <label>Taux (%)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>