force-app/main/default/objects/TVA_Produit__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <inlineHelpText>Type de produit pour les certificats CEE</inlineHelpText>
    <label>Type (CEE)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ESCType</valueSetName>
    </valueSet>
</CustomField>