force-app/main/default/objects/TVA_Produit__c/validationRules/VR_K3_TVAProduit_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_TVAProduit_EndDate</fullName>
    <active>true</active>
    <description>La date de fin doit être supérieure ou égale à la date de début</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
Datefin__c &lt; Datedebut__c</errorConditionFormula>
    <errorDisplayField>Datefin__c</errorDisplayField>
    <errorMessage>La date de fin doit être supérieure ou égale à la date de début !</errorMessage>
</ValidationRule>