force-app/main/default/objects/TVA_Produit__c/validationRules/VR_K3_TVAProduit_Produit.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_TVAProduit_Produit</fullName>
    <active>true</active>
    <description>Le champ produit est obligatoire</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
ISBLANK(Produit__c)</errorConditionFormula>
    <errorDisplayField>Produit__c</errorDisplayField>
    <errorMessage>Le produit est obligatoire!</errorMessage>
</ValidationRule>