force-app/main/default/objects/TVA_Produit__c/listViews/EKL.listView-meta.xml
<ListView>
    <fullName>EKL</fullName>
    <columns>NAME</columns>
    <columns>Produit__c</columns>
    <columns>Taux__c</columns>
    <columns>Datedebut__c</columns>
    <columns>Datefin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Produit__c</field>
        <operation>contains</operation>
        <value>PG</value>
    </filters>
    <label>EKL</label>
</ListView>