force-app/main/default/objects/TVA_Produit__c/listViews/MISE_A_JOUR_TVA_LEGENDE_ET_VINCI_VITREE.listView-meta.xml
<ListView>
    <fullName>MISE_A_JOUR_TVA_LEGENDE_ET_VINCI_VITREE</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>3/24/2016 12:00 AM</value>
    </filters>
    <label>MISE A JOUR TVA LEGENDE ET VINCI VITREE</label>
    <language>fr</language>
</ListView>