force-app/main/default/objects/TVA_Produit__c/listViews/TVA_KERGUELEN.listView-meta.xml
<ListView>
    <fullName>TVA_KERGUELEN</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Produit__c</field>
        <operation>contains</operation>
        <value>MIQUELON</value>
    </filters>
    <label>TVA KERGUELEN</label>
    <language>fr</language>
</ListView>